 _____________________________________________________________________________
 
   Version 1.5.4
 _____________________________________________________________________________

 - In the Apparel dialog, changing values for an apparel item that a pawn is
 - already weating in the now updates the apparel immediately without needing
   to click the "Update" button
 - Bug fixes:
   - The Ideo panel is now hidden for pawns that should not have an ideo
   - Disabled skills now update properly when changing backstories or traits

 _____________________________________________________________________________
 
   Version 1.5.3
 _____________________________________________________________________________

 - Added a style selection dropdown to the Apparel dialog
 - Added an indicator to show when a pawn is not allowed to add apparel
 - Bug fixes:
   - Removed spawn type options for books and schematics so that they can only
     "spawn with" your pawns to avoid uninitialized books
   - Fixed the positioning of the Appearance Panel dialog
   - The Psylink hediff is now saved with the correct level
   - Fixed a problem where trying to move a pawn from the colony list to the
     world list would add a duplicate of the pawn to the colony list instead
   - Fixed a problem where saving a preset would not save all pawn values
     correctly, even though saving just the character would
   - Fixed problems when changing and loading skill levels for pawns with an
     aptitude for a skill

 _____________________________________________________________________________
 
   Version 1.5.2
 _____________________________________________________________________________

 - Bug fixes:
   - Fixed the randomize button in the name panel
   - Bionics/implants are applied from save files again
   - Custom xenotypes are loaded from save files again
   - Fixed a problem where the color selector was not visible in the Apparel
     dialog in some cases